update Layout Profile

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -61,6 +61,39 @@ background:#DADADA;
     font-size: 1.5em;
 }
 
-.Icons:hover{
+.ProfilN {
+    position: relative; /* Définir la position relative pour le parent direct */
+    padding-right: 5%;
+}
+
+.ProfileMenu {
+    position: absolute;
+    top: 50px; /* Ajuste ceci en fonction de la hauteur de ton icône de profil */
+    right: 0; /* Ajuste ceci si nécessaire pour aligner avec l'icône de profil */
+    left: auto; /* Assure-toi que le menu s'aligne à partir de la droite de l'icône de profil */
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1000;
+}
+
+.MenuOption {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.MenuOption:hover {
+    background-color: #f1f1f1;
+}
+
+.Icons {
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+.Icons:hover {
     color: royalblue;
 }
