--- a/src/pages/PanierPages.css
+++ b/src/pages/PanierPages.css
@@ -17,3 +17,9 @@
     border-radius: 15px;
     padding: 0 1em 0 1em;
 }
+.QuantitéTrash{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
