--- a/src/pages/PanierPages.css
+++ b/src/pages/PanierPages.css
@@ -1,11 +1,11 @@
 .AllP{
     display: flex;
     margin-top: 4em;
+    justify-content: space-around;
 }
 
 .LeftP{
     background-color: #87b9b2;
-    margin-left: 15em;
     border-radius: 15px;
     padding: 0 3em 1em 3em;
 }
@@ -22,4 +22,23 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+}
+
+.RightP{
+    display: flex;
+    background-color: #87b9b2;
+    border-radius: 15px;
+    padding: 0 3em 1em 3em;
+    align-items: center;
+    flex-direction: column;
+}
+
+.Formulaire{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2em;
+}
+
+.object-form2{
+    padding-bottom: 1em;
 }
