--- a/src/pages/ModalePaiement.css
+++ b/src/pages/ModalePaiement.css
@@ -1,4 +1,4 @@
-/* CSS pour la modale */
+
 .modal2 {
     display: flex;
     justify-content: center;
@@ -8,21 +8,21 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
-    z-index: 9999; /* Assure que la modale est au-dessus de tout le reste */
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
 }
 
 .modal2-content {
-    background-color: #fff; /* Fond de la modale */
+    background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Ombre légère */
-    max-width: 80%; /* Largeur maximale de la modale */
-    max-height: 80%; /* Hauteur maximale de la modale */
-    overflow-y: auto; /* Activer le défilement vertical si nécessaire */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-width: 80%;
+    max-height: 80%;
+    overflow-y: auto;
 }
 
-/* Optionnel : Animation pour ouvrir/fermer la modale */
+
 .modal2-content {
     animation: zoomIn 0.3s ease forwards;
 }
